--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,9 @@
         </dependency>
         <!-- pack with -->
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>5.0.0.Alpha2</version>
+            <groupId>org.zeromq</groupId>
+            <artifactId>jeromq</artifactId>
+            <version>0.3.5</version>
         </dependency>
     </dependencies>
 
