--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lambstat</groupId>
-    <artifactId>event-driven</artifactId>
+    <artifactId>baseEvent-driven</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
