--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,16 @@
     <version>1.0-SNAPSHOT</version>
     <name>event-driven</name>
 
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.generated.code.path>target/generated-sources/src/main/java</java.generated.code.path>
+        <java.package.name>com.lambstat.model</java.package.name>
+        <java.include.path.model>com/lambstat/model/*.java</java.include.path.model>
+        <proto.file.path>src/main/resources/proto</proto.file.path>
+        <proto.file.name>LambstatModels.proto</proto.file.name>
+    </properties>
+
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
@@ -21,6 +31,115 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- CLEAR GENERATED JAVA CODE, XSD AND PROTO FILES -->
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>src/main/resources/proto</directory>
+                            <includes>
+                                <include>**/*.proto</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                        <fileset>
+                            <directory>src/main/resources/xsd</directory>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+
+            <!-- GENERATE XSD FROM JAVA MODEL -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>schemagen</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <includes>
+                                <include>${java.include.path.model}</include>
+                            </includes>
+                            <outputDirectory>${basedir}/src/main/resources/xsd</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- GENERATE PROTO FILE FROM XSD -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <executable>java</executable>
+                            <!-- optional -->
+                            <workingDirectory>${basedir}/src/main</workingDirectory>
+                            <arguments>
+                                <argument>-jar</argument>
+                                <argument>${basedir}/src/main/resources/proto/xsd2thrift-1.0.one-jar.jar</argument>
+                                <argument>--protobuf</argument>
+                                <argument>--package=${java.package.name}</argument>
+                                <argument>--nestEnums=false</argument>
+                                <argument>--filename=${basedir}/${proto.file.path}/${proto.file.name}</argument>
+                                <argument>${basedir}/src/main/resources/xsd/schema1.xsd</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- GENERATE JAVA AND CPP SOURCES -->
+            <plugin>
+                <groupId>com.google.protobuf.tools</groupId>
+                <artifactId>maven-protoc-plugin</artifactId>
+                <version>0.1.12-SNAPSHOT</version>
+                <configuration>
+                    <protocExecutable>protoc</protocExecutable>
+                    <protoSourceRoot>${project.basedir}/${proto.file.path}/</protoSourceRoot>
+                    <languageSpecifications>
+                        <LanguageSpecification>
+                            <language>JAVA</language>
+                            <outputDirectory>
+                                ${project.basedir}/${java.generated.code.path}/
+                            </outputDirectory>
+                        </LanguageSpecification>
+                        <LanguageSpecification>
+                            <language>CPP</language>
+                            <outputDirectory>
+                                ${project.basedir}/target/generated-sources/cpp
+                            </outputDirectory>
+                        </LanguageSpecification>
+                    </languageSpecifications>
+                    <protocExecutable>/usr/local/bin/protoc</protocExecutable>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- BELOW PLUGIN GENERATES WADL FROM RESOURCES -->
             <plugin>
                 <groupId>org.apache.cxf</groupId>
@@ -40,7 +159,7 @@
                             <addResourceAndMethodIds>true</addResourceAndMethodIds>
                             <linkAnyMediaTypeToXmlSchema>true</linkAnyMediaTypeToXmlSchema>
                             <classResourceNames/>
-                            <basePackages>com.lambstat.module.jetty.resource</basePackages>
+                            <basePackages>com.lambstat.module.webserver.resource</basePackages>
                             <docProvider>org.apache.cxf.maven_plugin.javatowadl.ResourceMapJavaDocProvider</docProvider>
                             <attachWadl>true</attachWadl>
                             <outputFile>${project.build.directory}/classes/application.wadl</outputFile>
@@ -77,7 +196,7 @@
                         <configuration>
                             <transformers>
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
@@ -148,7 +267,47 @@
             <artifactId>genson</artifactId>
             <version>1.3</version>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.10.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.0.0-beta-1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xsom</groupId>
+            <artifactId>xsom</artifactId>
+            <version>20140925</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
