--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,13 @@
                 <artifactId>cxf-java2wadl-plugin</artifactId>
                 <version>3.1.3</version>
                 <inherited>true</inherited>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>javax.servlet-api</artifactId>
+                        <version>3.1.0</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>process-classes</id>
