--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,11 @@
             <artifactId>jersey-container-jetty-http</artifactId>
             <version>2.22.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>2.22.1</version>
+        </dependency>
         <!-- support for media type json -->
         <dependency>
             <groupId>com.owlike</groupId>
