--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <name>event-driven</name>
 
+	  <repositories>
+	    <repository>
+	      <id>davidtrott</id>
+	      <name>maven protoc plugin</name>
+	      <url>http://maven.davidtrott.com/</url>
+	    </repository>
+	  </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
