--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,15 @@
 	    <repository>
 	      <id>davidtrott</id>
 	      <name>maven protoc plugin</name>
-	      <url>http://maven.davidtrott.com/</url>
+	      <url>http://maven.davidtrott.com/repository</url>
 	    </repository>
 	  </repositories>
+    <pluginRepositories>
+	<pluginRepository>
+	    <id>dtrott</id>
+	    <url>http://maven.davidtrott.com/repository</url>
+	</pluginRepository>
+    </pluginRepositories>  
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
