--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,19 @@
     <version>1.0-SNAPSHOT</version>
     <name>event-driven</name>
 
-	  <repositories>
-	    <repository>
-	      <id>davidtrott</id>
-	      <name>maven protoc plugin</name>
-	      <url>http://maven.davidtrott.com/repository</url>
-	    </repository>
-	  </repositories>
+    <repositories>
+        <repository>
+            <id>David Trott</id>
+            <name>maven protoc plugin</name>
+            <url>http://maven.davidtrott.com/repository</url>
+        </repository>
+    </repositories>
     <pluginRepositories>
-	<pluginRepository>
-	    <id>dtrott</id>
-	    <url>http://maven.davidtrott.com/repository</url>
-	</pluginRepository>
-    </pluginRepositories>  
+        <pluginRepository>
+            <id>David Trott Plugins</id>
+            <url>http://maven.davidtrott.com/repository</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -141,7 +141,7 @@
                             </outputDirectory>
                         </LanguageSpecification>
                     </languageSpecifications>
-                    <protocExecutable>/usr/local/bin/protoc</protocExecutable>
+                    <protocExecutable>${project.basedir}/src/main/resources/proto/protoc</protocExecutable>
                 </configuration>
                 <executions>
                     <execution>
