protoc executable should be within the PATH

--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
                             </outputDirectory>
                         </LanguageSpecification>
                     </languageSpecifications>
-                    <protocExecutable>/usr/local/bin/protoc</protocExecutable>
+                    <protocExecutable>protoc</protocExecutable>
                 </configuration>
                 <executions>
                     <execution>
